# VIA

./: .env.example  .gitignore  QDRANT-FEATURES.md  README.md  docker-compose.yml  generate_demo_logs.py  generate_logs.py  ingest.py  ingest_ledger.db  main.py  pyproject.toml  registry.db  requirements.txt  test-once.py  ui.py
app/: main.py  worker.py
app/api/v1/: router.py
app/api/v1/endpoints/: analysis.py  control.py  ingest.py  schema.py  stream.py
app/core/: config.py
app/db/: registry.py
app/schemas/: models.py
app/services/: analysis_service.py  control_service.py  forensic_analysis_service.py  ingestion_service.py  promotion_service.py  qdrant_service.py  qdrant_wrapper.py  rhythm_analysis_service.py  schema_service.py
ingestor/: main.py
otel_mock/: main.py
prds/: grok-todo.md
tests/: test_api_flow.py
