[project]
name = "via"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "faker>=37.6.0",
    "fastapi>=0.116.1",
    "fastembed>=0.7.3",
    "gradio>=5.45.0",
    "qdrant-client>=1.15.1",
    "tabulate>=0.9.0",
    "uvicorn>=0.35.0",
]
