[project]
name = "via"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "faker>=37.6.0",
    "fastapi>=0.116.1",
    "fastembed>=0.7.3",
    "gradio>=5.45.0",
    "httpx>=0.28.1",
    "pydantic>=2.11.9",
    "pydantic-settings>=2.10.1",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "python-dotenv>=1.1.1",
    "pyyaml>=6.0.2",
    "qdrant-client>=1.15.1",
    "simhash>=2.1.2",
    "uvicorn[standard]>=0.35.0",
]
